Add improvements, fixes

--- a/packages/core/sandbox.html
+++ b/packages/core/sandbox.html
@@ -277,7 +277,7 @@
                     version: version || undefined,
                     features: features ? features.split(',').map(f => f.trim()) : [],
                     stylesLink: stylesLink || undefined,
-                    customStyles: customStyles || undefined,
+                    styles: customStyles || undefined,
                     hiddenSections: hiddenSections ? hiddenSections.split(',').map(s => s.trim()) : [],
                     logLevel
                 };
