Rename the package

--- a/packages/core/combined-sandbox.html
+++ b/packages/core/combined-sandbox.html
@@ -768,7 +768,7 @@
           } else {
             // NPM package
             const version = getNpmPackageVersion();
-            importUrl = `https://unpkg.com/chekin-host-sdk@${version}`;
+            importUrl = `https://unpkg.com/@chekinapp/host-sdk@${version}`;
           }
 
           log(`Loading SDK from: ${importUrl}`);
