Update the sandbox

--- a/packages/core/sandbox.html
+++ b/packages/core/sandbox.html
@@ -467,15 +467,8 @@
                 <textarea
                   id="payServicesConfig"
                   name="payServicesConfig"
-                  placeholder='{"currency": "USD", "liveness": {"price": 5}}'
-                >
-{
-  "currency": "usd",
-  "liveness": {
-    "price": 333
-  }
-}</textarea
-                >
+                  placeholder='{"currency": "usd", "liveness": {"price": 333}}'
+                ></textarea>
               </div>
             </div>
           </div>
@@ -747,8 +740,7 @@
         hidden_housing_documents: false,
         hidden_identity_verification: false,
         hiddenFormFields: '',
-        payServicesConfig:
-          '{\n  "currency": "usd",\n  "liveness": {\n    "price": 333\n  }\n}',
+        payServicesConfig: '',
         logLevel: 'info',
       };
 
